--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-body { background: #333; }
+body { background: #eee; }
 
 img { border: 0; max-width: 100%; }
 
@@ -129,7 +129,7 @@ img { border: 0; max-width: 100%; }
   top: 23px;
   left: 50%;
   text-align: center;
-  background: #6a8db3;
+  background: #eee;
   color: #fff;
   width: 35px;
   height: 35px;
