--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7,9 +7,6 @@
 
 
 
-
-
-
 body,
 input,
 textarea,
@@ -420,22 +417,6 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
-#header1-3 .mbr-section-title {
-  color: #ffffff;
-  text-align: center;
-}
-#header1-3 .mbr-section-lead P {
-  color: #ffffff;
-}
-#header1-3 .mbr-section-title SPAN {
-  text-align: left;
-  font-size: 46px;
-  font-family: 'Raleway', sans-serif;
-  color: #ffffff;
-}
-#header1-3 .mbr-section-lead I {
-  font-size: 15px;
-}
 #menu-o .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -455,11 +436,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-o .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-o .dropdown-item,
 #menu-o .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-o .link:hover,
 #menu-o .dropdown-item:hover,
@@ -498,26 +479,26 @@ h6,
 #menu-o .dropdown-item[aria-expanded="true"] {
   color: #cccccc!important;
 }
-#header3-x .mbr-section-title,
-#header3-x .mbr-section-subtitle {
+#header1-3u .mbr-section-title {
+  color: #ffffff;
   text-align: center;
 }
-#header3-x H3 {
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
-  text-align: right;
-  color: #7c706b;
+#header1-3u .mbr-section-lead P {
+  color: #ffffff;
 }
-#content1-y P {
+#header1-3u .mbr-section-title SPAN {
   text-align: left;
+  font-size: 46px;
   font-family: 'Raleway', sans-serif;
-  font-size: 14px;
-  color: #7c706b;
+  color: #000000;
 }
-#content1-y DIV {
-  color: #a38f84;
-  font-size: 14px;
-  font-family: 'Raleway', sans-serif;
+#header1-3u .mbr-section-lead I {
+  font-size: 15px;
+  color: #000000;
+  text-align: center;
+}
+#header1-3u .mbr-section-title DIV {
+  text-align: right;
 }
 
 
@@ -548,11 +529,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-2w .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-2w .dropdown-item,
 #menu-2w .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-2w .link:hover,
 #menu-2w .dropdown-item:hover,
@@ -591,11 +572,11 @@ h6,
 #menu-2w .dropdown-item[aria-expanded="true"] {
   color: #cccccc!important;
 }
-#msg-box8-1b .mbr-section-title,
-#msg-box8-1b p {
+#msg-box8-3t .mbr-section-title,
+#msg-box8-3t p {
   color: #fff;
 }
-#msg-box8-1b .mbr-section-title {
+#msg-box8-3t .mbr-section-title {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
@@ -714,11 +695,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-1h .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-1h .dropdown-item,
 #menu-1h .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-1h .link:hover,
 #menu-1h .dropdown-item:hover,
@@ -765,11 +746,13 @@ h6,
   color: #7c706b;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 14px;
+  text-align: right;
 }
 #header3-1o H3 {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
   font-size: 25px;
+  text-align: right;
 }
 #features3-1q H4 {
   color: #7c706b;
@@ -930,86 +913,6 @@ h6,
 
 
 
-#gallery3-2g LI {
-  color: #000000;
-}
-#menu-28 .hide-buttons .nav-btn {
-  display: none !important;
-}
-#menu-28 .navbar-caption {
-  color: #ffffff;
-}
-#menu-28 .navbar-toggler {
-  color: #7c706b;
-}
-#menu-28 .close-icon::before,
-#menu-28 .close-icon::after {
-  background-color: #7c706b;
-}
-#menu-28 .link,
-#menu-28 .dropdown-item {
-  color: #7c706b;
-  font-family: 'Raleway', sans-serif;
-}
-#menu-28 .link {
-  font-size: 0.65rem;
-}
-#menu-28 .dropdown-item,
-#menu-28 .nav-dropdown-sm .link {
-  font-size: 0.704rem;
-}
-#menu-28 .link:hover,
-#menu-28 .dropdown-item:hover,
-#menu-28 .link:focus,
-#menu-28 .dropdown-item:focus {
-  color: #cccccc;
-}
-#menu-28 .link[aria-expanded="true"],
-#menu-28 .dropdown-menu {
-  background: #e6e6e6;
-}
-#menu-28 .nav-dropdown-sm .link:focus,
-#menu-28 .nav-dropdown-sm .link:hover,
-#menu-28 .nav-dropdown-sm .dropdown-item:focus,
-#menu-28 .nav-dropdown-sm .dropdown-item:hover {
-  background: #f7f7f7!important;
-}
-#menu-28 .navbar,
-#menu-28 .nav-dropdown-sm,
-#menu-28 .nav-dropdown-sm .link[aria-expanded="true"],
-#menu-28 .nav-dropdown-sm .dropdown-menu {
-  background: #ffffff;
-}
-#menu-28 .bg-color.transparent .link {
-  color: #7c706b;
-  transition: none;
-}
-#menu-28 .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#menu-28 .bg-color.transparent.opened .link:hover,
-#menu-28 .bg-color.transparent.opened .link:focus {
-  color: #cccccc;
-}
-#menu-28 .link[aria-expanded="true"],
-#menu-28 .dropdown-item[aria-expanded="true"] {
-  color: #cccccc!important;
-}
-#gallery1-2f LI {
-  font-size: 15px;
-}
-#contacts1-29 P {
-  color: #7c706b;
-  font-size: 13px;
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-#contacts1-29 STRONG {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 15px;
-}
-
-
-
 #menu-2w .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -1029,11 +932,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-2w .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-2w .dropdown-item,
 #menu-2w .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-2w .link:hover,
 #menu-2w .dropdown-item:hover,
@@ -1101,11 +1004,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-2r .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-2r .dropdown-item,
 #menu-2r .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-2r .link:hover,
 #menu-2r .dropdown-item:hover,
@@ -1167,11 +1070,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-2u .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-2u .dropdown-item,
 #menu-2u .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-2u .link:hover,
 #menu-2u .dropdown-item:hover,
@@ -1252,11 +1155,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-2v .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-2v .dropdown-item,
 #menu-2v .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-2v .link:hover,
 #menu-2v .dropdown-item:hover,
@@ -1337,11 +1240,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-2w .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-2w .dropdown-item,
 #menu-2w .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-2w .link:hover,
 #menu-2w .dropdown-item:hover,
@@ -1414,11 +1317,11 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #menu-3k .link {
-  font-size: 0.65rem;
+  font-size: 0.6rem;
 }
 #menu-3k .dropdown-item,
 #menu-3k .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+  font-size: 0.650rem;
 }
 #menu-3k .link:hover,
 #menu-3k .dropdown-item:hover,
@@ -1469,74 +1372,160 @@ h6,
 }
 
 
-#menu-3m .hide-buttons .nav-btn {
+
+#menu-3p .hide-buttons .nav-btn {
   display: none !important;
 }
-#menu-3m .navbar-caption {
+#menu-3p .navbar-caption {
   color: #ffffff;
 }
-#menu-3m .navbar-toggler {
+#menu-3p .navbar-toggler {
   color: #7c706b;
 }
-#menu-3m .close-icon::before,
-#menu-3m .close-icon::after {
+#menu-3p .close-icon::before,
+#menu-3p .close-icon::after {
   background-color: #7c706b;
 }
-#menu-3m .link,
-#menu-3m .dropdown-item {
+#menu-3p .link,
+#menu-3p .dropdown-item {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
 }
-#menu-3m .link {
-  font-size: 0.65rem;
+#menu-3p .link {
+  font-size: 0.6rem;
 }
-#menu-3m .dropdown-item,
-#menu-3m .nav-dropdown-sm .link {
-  font-size: 0.704rem;
+#menu-3p .dropdown-item,
+#menu-3p .nav-dropdown-sm .link {
+  font-size: 0.650rem;
 }
-#menu-3m .link:hover,
-#menu-3m .dropdown-item:hover,
-#menu-3m .link:focus,
-#menu-3m .dropdown-item:focus {
+#menu-3p .link:hover,
+#menu-3p .dropdown-item:hover,
+#menu-3p .link:focus,
+#menu-3p .dropdown-item:focus {
   color: #cccccc;
 }
-#menu-3m .link[aria-expanded="true"],
-#menu-3m .dropdown-menu {
+#menu-3p .link[aria-expanded="true"],
+#menu-3p .dropdown-menu {
   background: #e6e6e6;
 }
-#menu-3m .nav-dropdown-sm .link:focus,
-#menu-3m .nav-dropdown-sm .link:hover,
-#menu-3m .nav-dropdown-sm .dropdown-item:focus,
-#menu-3m .nav-dropdown-sm .dropdown-item:hover {
+#menu-3p .nav-dropdown-sm .link:focus,
+#menu-3p .nav-dropdown-sm .link:hover,
+#menu-3p .nav-dropdown-sm .dropdown-item:focus,
+#menu-3p .nav-dropdown-sm .dropdown-item:hover {
   background: #f7f7f7!important;
 }
-#menu-3m .navbar,
-#menu-3m .nav-dropdown-sm,
-#menu-3m .nav-dropdown-sm .link[aria-expanded="true"],
-#menu-3m .nav-dropdown-sm .dropdown-menu {
+#menu-3p .navbar,
+#menu-3p .nav-dropdown-sm,
+#menu-3p .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-3p .nav-dropdown-sm .dropdown-menu {
   background: #ffffff;
 }
-#menu-3m .bg-color.transparent .link {
+#menu-3p .bg-color.transparent .link {
   color: #7c706b;
   transition: none;
 }
-#menu-3m .bg-color.transparent.opened .link {
+#menu-3p .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#menu-3m .bg-color.transparent.opened .link:hover,
-#menu-3m .bg-color.transparent.opened .link:focus {
+#menu-3p .bg-color.transparent.opened .link:hover,
+#menu-3p .bg-color.transparent.opened .link:focus {
   color: #cccccc;
 }
-#menu-3m .link[aria-expanded="true"],
-#menu-3m .dropdown-item[aria-expanded="true"] {
+#menu-3p .link[aria-expanded="true"],
+#menu-3p .dropdown-item[aria-expanded="true"] {
   color: #cccccc!important;
 }
-#msg-box8-3n .mbr-section-title,
-#msg-box8-3n p {
+#msg-box8-3q .mbr-section-title,
+#msg-box8-3q p {
   color: #fff;
 }
-#msg-box8-3n .mbr-section-title {
+#msg-box8-3q .mbr-section-title {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
+  text-align: center;
+}
+#msg-box8-3y .mbr-section-title,
+#msg-box8-3y p {
+  color: #fff;
+}
+#msg-box8-3y .mbr-section-title {
+  color: #ffffff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+  text-align: center;
+}
+
+
+#menu-3r .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-3r .navbar-caption {
+  color: #ffffff;
+}
+#menu-3r .navbar-toggler {
+  color: #7c706b;
+}
+#menu-3r .close-icon::before,
+#menu-3r .close-icon::after {
+  background-color: #7c706b;
+}
+#menu-3r .link,
+#menu-3r .dropdown-item {
+  color: #7c706b;
+  font-family: 'Raleway', sans-serif;
+}
+#menu-3r .link {
+  font-size: 0.6rem;
+}
+#menu-3r .dropdown-item,
+#menu-3r .nav-dropdown-sm .link {
+  font-size: 0.650rem;
+}
+#menu-3r .link:hover,
+#menu-3r .dropdown-item:hover,
+#menu-3r .link:focus,
+#menu-3r .dropdown-item:focus {
+  color: #cccccc;
+}
+#menu-3r .link[aria-expanded="true"],
+#menu-3r .dropdown-menu {
+  background: #e6e6e6;
+}
+#menu-3r .nav-dropdown-sm .link:focus,
+#menu-3r .nav-dropdown-sm .link:hover,
+#menu-3r .nav-dropdown-sm .dropdown-item:focus,
+#menu-3r .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#menu-3r .navbar,
+#menu-3r .nav-dropdown-sm,
+#menu-3r .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-3r .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#menu-3r .bg-color.transparent .link {
+  color: #7c706b;
+  transition: none;
+}
+#menu-3r .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-3r .bg-color.transparent.opened .link:hover,
+#menu-3r .bg-color.transparent.opened .link:focus {
+  color: #cccccc;
+}
+#menu-3r .link[aria-expanded="true"],
+#menu-3r .dropdown-item[aria-expanded="true"] {
+  color: #cccccc!important;
+}
+#msg-box8-3s .mbr-section-title,
+#msg-box8-3s p {
+  color: #fff;
+}
+#msg-box8-3s .mbr-section-title {
+  color: #7c706b;
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+  text-align: center;
 }
