--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -479,25 +479,25 @@ h6,
 #menu-o .dropdown-item[aria-expanded="true"] {
   color: #cccccc!important;
 }
-#header1-3u .mbr-section-title {
+#header1-40 .mbr-section-title {
   color: #ffffff;
   text-align: center;
 }
-#header1-3u .mbr-section-lead P {
+#header1-40 .mbr-section-lead P {
   color: #ffffff;
 }
-#header1-3u .mbr-section-title SPAN {
+#header1-40 .mbr-section-title SPAN {
   text-align: left;
   font-size: 46px;
   font-family: 'Raleway', sans-serif;
   color: #000000;
 }
-#header1-3u .mbr-section-lead I {
+#header1-40 .mbr-section-lead I {
   font-size: 15px;
   color: #000000;
   text-align: center;
 }
-#header1-3u .mbr-section-title DIV {
+#header1-40 .mbr-section-title DIV {
   text-align: right;
 }
 
