--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -633,6 +633,7 @@ h6,
   color: #7c706b;
   font-size: 13px;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: left;
 }
 #contacts1-2b STRONG {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -938,6 +939,7 @@ h6,
   color: #7c706b;
   font-size: 13px;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: left;
 }
 #contacts1-2b STRONG {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -1012,6 +1014,7 @@ h6,
   color: #7c706b;
   font-size: 13px;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: left;
 }
 #contacts1-2b STRONG {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -1451,6 +1454,7 @@ h6,
   color: #7c706b;
   font-size: 13px;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: left;
 }
 #contacts1-2b STRONG {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -1550,6 +1554,7 @@ h6,
   color: #7c706b;
   font-size: 13px;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: left;
 }
 #contacts1-2b STRONG {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -1634,6 +1639,7 @@ h6,
   color: #7c706b;
   font-size: 13px;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: left;
 }
 #contacts1-2b STRONG {
   font-family: 'Open Sans Condensed', sans-serif;
