--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -594,7 +594,7 @@ h6,
 }
 #msg-box5-2k P {
   color: #7c706b;
-  font-size: 14px;
+  font-size: 13px;
   font-family: 'Raleway', sans-serif;
   text-align: left;
 }
@@ -609,7 +609,7 @@ h6,
   font-family: 'Raleway', sans-serif;
 }
 #content1-2l P {
-  font-size: 14px;
+  font-size: 13px;
   color: #7c706b;
 }
 #features3-1e H4 {
@@ -1422,13 +1422,13 @@ h6,
 #header3-4w H3 {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
-  font-size: 24px;
+  font-size: 21px;
   text-align: right;
 }
 #features3-4l P {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
 }
 #header3-4n .mbr-section-title,
 #header3-4n .mbr-section-subtitle {
@@ -1437,7 +1437,7 @@ h6,
 #header3-4n H3 {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
-  font-size: 24px;
+  font-size: 21px;
   text-align: right;
 }
 #features3-4o P {
@@ -1448,7 +1448,7 @@ h6,
 #features3-4p P {
   color: #7c706b;
   font-family: 'Raleway', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
 }
 #contacts1-2b P {
   color: #7c706b;
@@ -1722,7 +1722,7 @@ h6,
   font-family: 'Open Sans Condensed', sans-serif;
 }
 #msg-box5-4s P {
-  color: #a38f84;
+  color: #7c706b;
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
   text-align: left;
